--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,6 @@ services:
       context: .
     # image: alikhil/tic-tac-toe-telegram-bot:0.1
     environment:
-      TOKEN: <YOUR_TELEGRAM_BOT_TOKEN>
+      TOKEN: <7046447942:AAFHb2l0JT1WvI7FySaVByV210eclW9JKnc>
   
     restart: on-failure
